# GAA

./: .eslintrc.json  .gitignore  CONTEXT.md  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.ts  temp_workflow_lines.txt  tsconfig.json
.github/workflows/: update-fixtures.yml
.next/: app-build-manifest.json  build-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @swc.js  next.js
.next/static/chunks/: webpack.js  (+1 more)
app/: layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/fixtures/: page.tsx
app/results/: page.tsx
backend/: __init__.py  config.yaml  irish_map.py  main.py  merge.py  models.py  normalise.py  utils.py
backend/.cache/: combined_raw.json  leinster_tribe_sample.json  scraper_debug.json  scraper_raw.json  snapshot_connachtgaa.ie.html  snapshot_leinstergaa.ie.html  snapshot_munster.gaa.ie.html  snapshot_ulster.gaa.ie.html
backend/adapters/: __init__.py  clubzap.py  gaa_gms.py  ics_ecal.py  scraper_sportsmanager.py  scraper_web.py
components/: AnimatedTitle.tsx  FixtureCard.tsx  FixturesSearch.tsx  ResultsSearch.tsx  SkeletonList.tsx
lib/: competitions.ts  data.ts  dates.ts  filters.ts  irish_map.ts  search.ts
lib/__tests__/: filters.spec.ts
public/data/: competitions.json  fixtures.json  results.json
styles/: globals.css
tests/: smoke.spec.ts
(+29 files in other folders)
