[tool.poetry]
name = "gaa-pipeline"
version = "0.1.0"
description = "Zero-cost pipeline to aggregate GAA fixtures/results to static JSON"
authors = ["GAA Pipeline <noreply@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
pydantic = "^2.9.2"
orjson = "^3.10.7"
python-dateutil = "^2.9.0.post0"
icalendar = "^5.0.12"
selectolax = "^0.3.21"
tenacity = "^9.0.0"
PyYAML = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"
mypy = "^1.13.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
ignore_missing_imports = true

